# pineapple-updater

./: CMakeLists.txt  Makefile  README.md  data.go  download_test.cpp  go.mod  go.sum  main.go  shell.nix
src/: data.go  main.go  ui.go
